--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,6 @@
 &nbsp; &nbsp; Reading Time:
 10 s
 &nbsp;</div></header><h1 id=hi-there>Hi there</h1><p>My name is Rizwan Ishak. In my free time I tend to read and experiment with computer. This is a collection of things which you might find interesting.
-You can follow me on twitter at <a href=https://twitter.com/OneLittleRiz>@OneLittleRiz</a></p><footer><hr></footer><div class=comments></div></article></body><div class=foot>&copy; 2019 - 2022 &#183;
+You can follow me on twitter at <a href=https://twitter.com/OneLittleRiz target=_blank>@OneLittleRiz</a></p><footer><hr></footer><div class=comments></div></article></body><div class=foot>&copy; 2019 - 2022 &#183;
 <a href=/>Home</a> · Theme <a href=https://github.com/RainerChiang/simpleness>Simpleness</a> Powered by <a href=https://gohugo.io/>Hugo</a> &#183;
 <a href=# aria-label="Go to Top"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentcolor" class="bi bi-chevron-up" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M7.646 4.646a.5.5.0 01.708.0l6 6a.5.5.0 01-.708.708L8 5.707l-5.646 5.647a.5.5.0 01-.708-.708l6-6z"/></svg></a></div></html>
